# aiorg-local-ai-engineering-org

./: .coverage  .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  test.sh  test_output.txt  tmp_check_graph.py
agents/advisors/: registry.py
agents/ai_engineer/: __init__.py  agent.py  prompts.py  tools.py
agents/backend_engineer/: __init__.py  agent.py  prompts.py  tools.py
agents/base/: __init__.py  agent.py  communication.py  memory.py  observability.py  tools.py
agents/code_review/: __init__.py  agent.py  prompts.py  tools.py
agents/code_review/rules/: python_style_guide.yaml  review_checklist.yaml
agents/data_engineer/: agent.py  prompts.py  tools.py
agents/developer/: agent.py
agents/devops_engineer/: __init__.py  agent.py  prompts.py  tools.py
agents/documentation/: agent.py  prompts.py  tools.py
agents/evaluation/: agent.py  prompts.py  tools.py
agents/evaluation/benchmarks/: code_quality_benchmark.py  rag_benchmark.py
agents/frontend_engineer/: __init__.py  agent.py  prompts.py  tools.py
agents/meta_agent/: agent.py
agents/observability_agent/: agent.py  prompts.py  tools.py
agents/orchestrator/: agent.py  graph.py  nodes.py  prompts.py  state.py  tools.py
agents/product_manager/: __init__.py  agent.py  prompts.py  tools.py
agents/product_manager/templates/: prd_template.md  user_story_template.md
agents/qa_engineer/: __init__.py  agent.py  prompts.py  tools.py
agents/release_manager/: agent.py
agents/research/: agent.py  prompts.py  sources.py  tools.py
agents/security_engineer/: __init__.py  agent.py  prompts.py  tools.py
agents/security_engineer/rules/: dependency_policy.yaml  owasp_rules.yaml
agents/solution_architect/: __init__.py  agent.py  prompts.py  tools.py
agents/solution_architect/patterns/: api_service_pattern.py  rag_pattern.py  web_app_pattern.py
agents/tools/: file_tools.py  github_tools.py  jira_tools.py  kanboard_tools.py  mattermost_tools.py  web_tools.py
backend/: config.py  dependencies.py  main.py
backend/agents/: __init__.py
backend/database/: models.py  session.py
backend/database/repositories/: __init__.py  agent_run_repo.py  artifact_repo.py  project_repo.py  task_repo.py  workflow_repo.py
backend/memory/: __init__.py  memory_manager.py
backend/middleware/: __init__.py  auth.py  cors.py  rate_limit.py  tracing.py
backend/models/: domain.py  events.py  requests.py  responses.py
backend/routers/: agents.py  artifacts.py  evaluations.py  memory.py  projects.py  tasks.py  websocket.py  workflows.py
backend/services/: __init__.py  cache_service.py  llm_service.py  vector_store.py
config/: agents.yaml  litellm_config.yaml  mcp_permissions.yaml
evaluation/evaluators/: agent_performance.py  architecture_quality.py  code_quality.py  rag_evaluator.py  workflow_efficiency.py
evaluation/reports/: scorecard.py
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/agents/: page.module.css  page.tsx
frontend/src/app/projects/: page.module.css  page.tsx
frontend/src/app/projects/[id]/: page.module.css  page.tsx
frontend/src/app/projects/new/: page.module.css  page.tsx
frontend/src/components/layout/: Header.module.css  Header.tsx  Sidebar.module.css  Sidebar.tsx
frontend/src/components/project/: ArtifactViewer.module.css  ArtifactViewer.tsx  WorkflowGraph.module.css  WorkflowGraph.tsx
frontend/src/components/ui/: Badge.module.css  Badge.tsx  Button.module.css  Button.tsx  Card.module.css  Card.tsx  Modal.module.css  Modal.tsx  Spinner.module.css  Spinner.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  websocket.ts
frontend/src/types/: index.ts
google/: __init__.py  generativeai.py
infra/docker/: Dockerfile.agent  Dockerfile.backend  Dockerfile.frontend
infra/scripts/: init-db.sql  setup.sh
litellm/: __init__.py
mcp/: __init__.py
mcp/client/: __init__.py  stdio.py
mcp/permissions/: access_control.py
mcp/servers/: browser_server.py  docker_server.py  filesystem_server.py  k8s_server.py  openclaw_server.py  postgres_server.py  redis_server.py
memory/: __init__.py  embeddings.py  memory_manager.py  postgres_memory.py  qdrant_memory.py  redis_memory.py
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial_schema.py
observability/: __init__.py  logging_config.py  metrics.py  otel-collector-config.yaml  prometheus.yml  tracing.py
observability/grafana/provisioning/dashboards/: dashboards.yaml
openclaw_mcp/: config.py
openclaw_mcp/servers/: docker_server.py  github_server.py  k8s_server.py  qdrant_server.py  shell_server.py
orchestrator/: __init__.py  engine.py
orchestrator/graphs/: full_build.py  incremental_build.py
orchestrator/state/: checkpointer.py  workflow_state.py
services/: agent_metrics.py  architecture_guard.py  artifact_storage.py  artifact_store.py  evaluation.py  event_bus.py  git_governance.py  llm_service.py  mcp_client_manager.py  notification_service.py  retry_strategy.py  semantic_cache.py  task_queue.py
src/openclaw/: __init__.py  api_client.py
tests/: conftest.py  test_graph_compilation.py  test_mcp_client.py
tests/e2e/: test_main_workflow.py
tests/unit/: test_api_client.py  test_api_endpoints.py
workflows/templates/: rag_chatbot.yaml  web_application.yaml
workflows/validators/: dag_validator.py
