[tool.poetry]
name = "openclaw"
version = "0.1.0"
description = "OpenClaw AI Engineering Organization — Multi-Agent Platform for Autonomous Software Engineering"
authors = ["OpenClaw Team <team@openclaw.dev>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/openclaw-dev/openclaw"
documentation = "https://docs.openclaw.dev"
keywords = ["ai", "agents", "multi-agent", "software-engineering", "langchain", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "openclaw", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"

# ── Web Framework ────────────────────────────────────────────────────────────
fastapi = "^0.115.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
gunicorn = "^23.0.0"
python-multipart = "^0.0.18"
websockets = "^14.0"

# ── AI / LLM ────────────────────────────────────────────────────────────────
langchain = "^0.3.0"
langchain-core = "^0.3.0"
langchain-community = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"
langchain-google-genai = "^2.0.0"
langgraph = "^0.2.0"
litellm = "^1.50.0"
tiktoken = "^0.8.0"

# ── MCP (Model Context Protocol) ────────────────────────────────────────────
mcp = "^1.0.0"

# ── Infrastructure (MCP Toolkit) ──────────────────────────────────────────
docker = "^7.1.0"
kubernetes = "^31.0.0"

# ── Database ─────────────────────────────────────────────────────────────────
sqlalchemy = { version = "^2.0.35", extras = ["asyncio"] }
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pgvector = "^0.3.0"

# ── Vector Store ─────────────────────────────────────────────────────────────
qdrant-client = "^1.12.0"

# ── Cache / Queues ───────────────────────────────────────────────────────────
redis = { version = "^5.2.0", extras = ["hiredis"] }
celery = { version = "^5.4.0", extras = ["redis"] }

# ── Observability ────────────────────────────────────────────────────────────
opentelemetry-api = "^1.28.0"
opentelemetry-sdk = "^1.28.0"
opentelemetry-exporter-otlp = "^1.28.0"
opentelemetry-instrumentation-fastapi = "^0.49b0"
opentelemetry-instrumentation-sqlalchemy = "^0.49b0"
opentelemetry-instrumentation-redis = "^0.49b0"
opentelemetry-instrumentation-httpx = "^0.49b0"
prometheus-client = "^0.21.0"
langfuse = "^2.50.0"
structlog = "^24.4.0"

# ── Auth / Security ──────────────────────────────────────────────────────────
pyjwt = { version = "^2.9.0", extras = ["crypto"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
httpx = "^0.27.0"

# ── Configuration / Validation ───────────────────────────────────────────────
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"

# ── Utilities ────────────────────────────────────────────────────────────────
tenacity = "^9.0.0"
jinja2 = "^3.1.4"
orjson = "^3.10.0"
rich = "^13.9.0"
click = "^8.1.7"
croniter = "^5.0.0"

# ── Git / Code Analysis ─────────────────────────────────────────────────────
gitpython = "^3.1.43"
tree-sitter = "^0.23.0"
tree-sitter-languages = "^1.10.0"
langgraph-checkpoint-postgres = "<2.0.0"
psycopg-binary = "^3.3.4"
grandalf = "^0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.5.0"
httpx = "^0.27.0"
factory-boy = "^3.3.1"
faker = "^30.0.0"
mypy = "^1.13.0"
ruff = "^0.8.0"
black = "^24.10.0"
isort = "^5.13.0"
pre-commit = "^4.0.0"
ipython = "^8.29.0"
debugpy = "^1.8.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
mkdocstrings = { version = "^0.27.0", extras = ["python"] }

[tool.poetry.scripts]
openclaw = "openclaw.cli:main"

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "ERA",  # eradicate (commented-out code)
]
ignore = [
    "E501",   # line length handled by formatter
    "S101",   # allow assert in tests
    "B008",   # allow Depends() in function args
    "ARG001", # allow unused function arguments (FastAPI deps)
]

[tool.ruff.lint.isort]
known-first-party = ["openclaw"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "T20"]
"migrations/**/*.py" = ["ERA001"]

# ── Black ────────────────────────────────────────────────────────────────────
[tool.black]
target-version = ["py312"]
line-length = 120

# ── isort ────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["openclaw"]

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--cov=backend",
    "--cov=agents",
    "--cov=services",
    "--cov=memory",
    "--cov=orchestrator",
    "--cov=workflows",
    "--cov=openclaw_mcp",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage",
    "--cov-fail-under=0",
]
markers = [
    "unit: Unit tests (deselect with '-m \"not unit\"')",
    "integration: Integration tests requiring external services",
    "e2e: End-to-end tests",
    "slow: Slow tests (> 5 seconds)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:langchain.*:",
    "ignore::DeprecationWarning:pydantic.*:",
]

# ── MyPy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "litellm.*",
    "celery.*",
    "tree_sitter.*",
    "tree_sitter_languages.*",
    "mcp.*",
]
ignore_missing_imports = true

# ── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["backend", "agents", "services", "memory", "orchestrator", "workflows", "openclaw_mcp"]
branch = true
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
